--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "bugsnag/bugsnag-laravel": "^2.24",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -16,7 +17,7 @@
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.0",
-        "rollbar/rollbar-laravel": "^7.2"
+        "psr/log": "1.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
