--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
-ROLLBAR_TOKEN=
+BUGSNAG_API_KEY=your-api-key-here
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
